# MINIR_GUI

./: INSTALL.md  README.md  build.bat  build_exe.py  install_crossplatform.py  launch.bat  launch.sh  launch_crossplatform.py  main.py  main_pyqt.py  main_pyqt_claude.py  minir_gui.spec  pyproject.toml  requirements.txt  setup.bat  setup.py
